<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingUserInterface</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="goto_sunrise">Go To Sunrise</string>
    <string name="title_activity_goto_sunrinse">gotosunrinse.com</string>
    <string name="default_url">"http://gotosunrise.com"</string>
    

</resources>
